--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
   text-rendering: optimizeLegibility;
@@ -9,4 +9,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #2a2c2f;
+  display: flex;
+  justify-content: center;
 }
