--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,15 @@
 @import url(../fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__size/__size.css);
+@import url(../blocks/header/__logo/__logo.css);
+@import url(../blocks/header/__lang-link/__lang-link.css);
+@import url(../blocks/header/__lang-link/_item/__lang-link_item.css);
+@import url(../blocks/header/__lang-link/_active/__lang-link_active.css);
+@import url(../blocks/header/__title/__title.css);
+@import url(../blocks/header/__subtitle/__subtitle.css);
+@import url(../blocks/header/__image/__image.css);
+@import url(../blocks/header/__caption/__caption.css);
+@import url();
+@import url();
+@import url();
