--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,18 @@
 @import url(../blocks/header/__subtitle/__subtitle.css);
 @import url(../blocks/header/__image/__image.css);
 @import url(../blocks/header/__caption/__caption.css);
+@import url(../blocks/header-lead/header-lead.css);
+@import url(../blocks/header-lead/__title/__title.css);
+@import url(../blocks/header-lead/__text/__text.css);
+@import url(../blocks/header-lead/__list/__list.css);
+@import url(../blocks/header-lead/__item/__item.css);
+@import url(../blocks/header-lead/__item/_normal/__item_normal.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/__item.css);
+@import url();
+@import url();
+@import url();
+@import url();
 @import url();
 @import url();
 @import url();
