--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,5 +10,7 @@
   -moz-osx-font-smoothing: grayscale;
   background: #2a2c2f;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
