--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -22,7 +22,7 @@
 @media (max-width: 900px) {
   .photo-grid {
     grid-template: repeat(6, 1fr) / repeat(2, 1fr);
-    gap: 18px;
+    gap: 14px;
   }
 }
 
@@ -33,10 +33,11 @@
   }
 }
 
-@media (max-width: 615px) {
+@media (max-width: 425px) {
   .photo-grid {
     grid-template: repeat(12, 1fr) / repeat(1, 1fr);
-    gap: 16px;
+    gap: 12px;
+    padding: 0 16px 14px 16px;
   }
 }
 
