--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/size/size.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__size/__size.css);
 @import url(../blocks/header/__logo/__logo.css);
 @import url(../blocks/header/__lang-link/__lang-link.css);
 @import url(../blocks/header/__lang-link/_item/__lang-link_item.css);
@@ -19,7 +19,7 @@
 @import url(../blocks/header-lead/__item/_normal/__item_normal.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/__item.css);
-@import url();
+@import url(../blocks/places/places.css);
 @import url();
 @import url();
 @import url();
