--- a/pages/index.css
+++ b/pages/index.css
@@ -20,8 +20,14 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/__item.css);
 @import url(../blocks/places/places.css);
-@import url();
-@import url();
+@import url(../blocks/places/_type_thin/_type_thin.css);
+@import url(../blocks/places/__title/__title.css);
+@import url(../blocks/places/__website/__website.css);
+@import url(../blocks/places/__url/__url.css);
+@import url(../blocks/places/__link/__link.css);
+@import url(../blocks/places/__image/__image.css);
+@import url(../blocks/places/__text/__text.css);
+@import url(../blocks/cover/cover.css);
 @import url();
 @import url();
 @import url();
