--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,9 +8,21 @@
   min-height: 740px;
   background-image: url("../../images/__background.jpg");
   background-size: cover;
+  width: 100%;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
+  .cover {
+    min-height: 62.5vw;
+  }
+}
+
+@media (max-width: 1023px) {
+  .cover {
+  }
+}
+
+@media (max-width: 767px) {
   .cover {
   }
 }
