--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,11 +4,44 @@
   padding-top: 75px;
   padding-bottom: 24px;
 }
+
+@media (max-width: 1023px) {
+  .footer {
+    padding-top: 72px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+  }
+}
+
 .footer__links {
   display: flex;
   justify-content: space-between;
   gap: 19px;
 }
+
+@media (max-width: 1279px) {
+  .footer__links {
+    padding-left: 48px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .footer__links {
+    padding-left: 24px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    gap: 32px;
+  }
+}
+
 .footer__link {
   margin: 0;
   text-decoration: none;
@@ -17,6 +50,14 @@
   line-height: 112%;
   color: #ffffff;
 }
+
+@media (max-width: 767px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 100%;
+  }
+}
+
 .footer__copyright {
   margin: 0;
   font-weight: 400;
@@ -24,5 +65,27 @@
   line-height: 16px;
   text-align: right;
   color: #ffffff;
-  padding-right: 22px;
+}
+
+@media (max-width: 1279px) {
+  .footer__copyright {
+    padding-right: 50px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .footer__copyright {
+    padding-right: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 100%;
+    text-align: left;
+    padding-right: 0;
+    padding-left: 22px;
+    padding-top: 48px;
+  }
 }
