--- a/blocks/header-lead/__title/__title.css
+++ b/blocks/header-lead/__title/__title.css
@@ -8,9 +8,9 @@
   padding: 90px 0 40px 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1023px) {
   .header-lead__title {
-    padding: 91px 0 40px 0;
+    padding: 91px 0 40px 24px;
   }
 }
 
@@ -25,7 +25,7 @@
     font-size: 42px;
     line-height: 46px;
     padding: 64px 16px 40px 16px;
-    width: 93.8vw;
+    width: 93.8%;
   }
 }
 
@@ -34,6 +34,6 @@
     font-size: 32px;
     line-height: 35px;
     padding: 64px 16px 40px 16px;
-    width: 93.8vw;
+    width: 93.8%;
   }
 }
