--- a/blocks/header-lead/header-lead.css
+++ b/blocks/header-lead/header-lead.css
@@ -2,8 +2,8 @@
   width: 690px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .header-lead {
-    width: 93.8vw;
+    width: 93.8%;
   }
 }
