--- a/blocks/header/__container/__container.css
+++ b/blocks/header/__container/__container.css
@@ -3,3 +3,9 @@
   justify-content: space-between;
   padding-top: 28px;
 }
+
+@media (max-width: 767px) {
+  .header__container {
+    padding-top: 16px;
+  }
+}
