--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -2,17 +2,21 @@
   padding-top: 19px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
   .header__lang-link {
+    padding-right: 49px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .header__lang-link {
+    padding-right: 24px;
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .header__lang-link {
+    padding-right: 16px;
+    padding-top: 14px;
   }
 }
