--- a/blocks/header/__logo/__logo.css
+++ b/blocks/header/__logo/__logo.css
@@ -3,19 +3,22 @@
   height: 52px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1279px) {
   .header__logo {
+    padding-left: 47px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .header__logo {
+    padding-left: 24px;
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .header__logo {
     width: 142px;
     height: 42px;
+    padding-left: 16px;
   }
 }
