--- a/blocks/header/__title/__title.css
+++ b/blocks/header/__title/__title.css
@@ -10,35 +10,19 @@
   padding: 57px 0 32px 0;
 }
 
-@media (max-width: 680px) {
+@media (max-width: 1279px) {
   .header__title {
-    width: 90%;
-    height: 27.5vw;
-    font-size: 76px;
-    line-height: 80px;
+    padding-top: 50px;
   }
 }
 
-@media (max-width: 570px) {
-  .header__title {
-    font-size: 55px;
-    line-height: 60px;
-  }
-}
-
-@media (max-width: 425px) {
-  .header__title {
-    font-size: 43px;
-    line-height: 46px;
-    padding: 116px 0 20px 0;
-  }
-}
-
-@media (max-width: 320px) {
+@media (max-width: 767px) {
   .header__title {
     font-size: 40px;
     line-height: 44px;
-    padding: 106px 0 16px 0;
+    padding: 49px 0 16px 0;
+    max-width: 288px;
+    max-height: 88px;
   }
 }
 
