--- a/pages/index.css
+++ b/pages/index.css
@@ -29,7 +29,11 @@
 @import url(../blocks/places/__image/__image.css);
 @import url(../blocks/places/__text/__text.css);
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__overlay/__overlay.css);
+@import url(../blocks/cover/__title/__title.css);
+@import url(../blocks/cover/__subtitle/__subtitle.css);
+@import url(../blocks/cover/__link/__link.css);
 @import url(../blocks/footer/footer.css);
-@import url();
-@import url();
-@import url();
+@import url(../blocks/footer/__links/__links.css);
+@import url(../blocks/footer/__link/__link.css);
+@import url(../blocks/footer/__copyright/__copyright.css);
