--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -9,6 +9,7 @@
   background-image: url("../../images/__background.jpg");
   background-size: cover;
   width: 100%;
+  position: relative;
 }
 
 @media (max-width: 1279px) {
