--- a/blocks/header/__lang/_type/header__lang_type_active.css
+++ b/blocks/header/__lang/_type/header__lang_type_active.css
@@ -1,4 +1,17 @@
 .header__lang_type_active {
   text-decoration: none;
   padding-left: 14px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #ffffff;
+  width: 29px;
+  height: 28px;
+}
+
+@media (max-width: 320px) {
+  .header__lang_type_normal {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
