--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,4 @@
-.header__lang_type_active {
-  text-decoration: none;
-  padding-left: 14px;
+.header__lang-link {
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
@@ -9,8 +7,13 @@
   height: 28px;
 }
 
+.header__lang-link:nth-child(2) {
+  text-decoration: none;
+  padding-left: 14px;
+}
+
 @media (max-width: 320px) {
-  .header__lang_type_normal {
+  .header__lang-link {
     font-size: 18px;
     line-height: 20px;
   }
