--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -10,12 +10,18 @@
 }
 
 .cover__link::before {
+  content: "";
   color: #ffffff;
   background-color: #2a2c2f;
   background-size: cover;
   opacity: 0.3;
   width: 100%;
   height: 100%;
+  cursor: url("../../images/Pointer.svg"), pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .cover__link:hover::before {
@@ -25,4 +31,5 @@
   top: 0;
   left: 0;
   bottom: 0;
+  cursor: url("../../images/Pointer.svg"), pointer;
 }
