--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,10 @@
   color: #ffffff;
 }
 
+.footer__link:hover {
+  cursor: url("../../../images/Pointer.png"), pointer;
+}
+
 @media (max-width: 767px) {
   .footer__link {
     font-size: 24px;
