--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,11 @@
 .header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  padding-top: 28px;
+}
+
+@media (max-width: 767px) {
+  .header {
+    padding-top: 16px;
+  }
 }
