--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,19 +1,19 @@
-.header-lead__list {
+.intro__list {
   margin: 0;
   list-style-type: none;
   padding: 33px 0 92px 0;
 }
 
 @media (max-width: 1023px) {
-  .header-lead__list {
+  .intro__list {
     width: 93.8%;
     padding: 31px 16px 92px 24px;
   }
 }
 
 @media (max-width: 767px) {
-  .header-lead__list {
-    padding-bottom: 39px;
+  .intro__list {
+    padding-bottom: 64px;
     padding-left: 16px;
     padding-right: 16px;
   }
