--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,4 +1,4 @@
-.header-lead__text {
+.intro__text {
   margin: 0;
   font-weight: 400;
   font-size: 16px;
@@ -7,14 +7,14 @@
 }
 
 @media (max-width: 1023px) {
-  .header-lead__text {
+  .intro__text {
     width: 94.3%;
     padding-left: 24px;
   }
 }
 
 @media (max-width: 767px) {
-  .header-lead__text {
+  .intro__text {
     width: 93.8%;
     padding-left: 16px;
   }
