--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,4 @@
-.header__caption {
+.lead__caption {
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
@@ -10,13 +10,13 @@
 }
 
 @media (max-width: 1023px) {
-  .header__caption {
+  .lead__caption {
     padding-left: 25px;
   }
 }
 
 @media (max-width: 767px) {
-  .header__caption {
+  .lead__caption {
     padding-left: 17px;
     padding-top: 5px;
   }
