--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,17 +1,17 @@
-.header__image {
+.lead__image {
   width: 984px;
   height: 615px;
 }
 
 @media (max-width: 1279px) {
-  .header__image {
+  .lead__image {
     width: 928px;
     height: 580px;
   }
 }
 
 @media (max-width: 1023px) {
-  .header__image {
+  .lead__image {
     width: 100%;
     height: 62.5vw;
   }
