--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
-.header__subtitle {
+.lead__subtitle {
   width: 640px;
-  height: 72px;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
@@ -11,14 +10,13 @@
 }
 
 @media (max-width: 1279px) {
-  .header__subtitle {
+  .lead__subtitle {
     padding-bottom: 55px;
   }
 }
 
 @media (max-width: 767px) {
-  .header__subtitle {
-    height: 40px;
+  .lead__subtitle {
     padding-bottom: 40px;
     font-size: 16px;
     line-height: 20px;
