--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,5 @@
-.header__title {
+.lead__title {
   width: 720px;
-  height: 200px;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
@@ -11,23 +10,22 @@
 }
 
 @media (max-width: 1279px) {
-  .header__title {
+  .lead__title {
     padding-top: 50px;
   }
 }
 
 @media (max-width: 767px) {
-  .header__title {
+  .lead__title {
     font-size: 40px;
     line-height: 44px;
     padding: 49px 0 16px 0;
     max-width: 288px;
-    max-height: 88px;
   }
 }
 
 @media (max-width: 295px) {
-  .header__title {
+  .lead__title {
     font-size: 35px;
     line-height: 39px;
     padding: 100px 0 14px 0;
