--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -6,7 +6,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  cursor: url("../../images/Pointer.svg"), pointer;
 }
 
 .cover__link::before {
@@ -17,7 +16,6 @@
   opacity: 0.3;
   width: 100%;
   height: 100%;
-  cursor: url("../../images/Pointer.svg"), pointer;
   position: absolute;
   top: 0;
   left: 0;
@@ -31,5 +29,5 @@
   top: 0;
   left: 0;
   bottom: 0;
-  cursor: url("../../images/Pointer.svg"), pointer;
+  cursor: url("../../../images/Pointer.png"), pointer;
 }
