--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,11 +2,11 @@
   width: 690px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding-left: 101px;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 1279px) {
   .intro {
-    width: 93.8%;
+    padding-left: 24px;
   }
 }
