--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -18,7 +18,7 @@
   .intro__title {
     font-size: 32px;
     line-height: 35px;
-    padding: 64px 16px 40px 16px;
+    padding: 64px 0 40px 16px;
     width: 93.8%;
   }
 }
