--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,11 +2,19 @@
   width: 690px;
   display: flex;
   flex-direction: column;
+  align-self: baseline;
   padding-left: 148px;
 }
 
 @media (max-width: 1279px) {
   .intro {
-    padding-left: 24px;
+    padding-left: 48px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .intro {
+    padding-left: 0;
+    width: 100%;
   }
 }
