--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,14 +3,14 @@
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(4, 1fr);
   gap: 16px;
-  margin: 0 auto;
-  max-width: 92.6%;
+  max-width: 1184px;
 }
 
 @media (max-width: 1279px) {
   .photo-grid {
     grid-template: repeat(4, 1fr) / repeat(3, 1fr);
     gap: 14px;
+    max-width: 928px;
   }
 }
 
@@ -18,6 +18,7 @@
   .photo-grid {
     grid-template: repeat(6, 1fr) / repeat(2, 1fr);
     gap: 16px;
+    max-width: 720px;
   }
 }
 
@@ -33,5 +34,6 @@
     grid-template: repeat(12, 1fr) / repeat(1, 1fr);
     gap: 12px;
     padding: 0 16px;
+    max-width: 288px;
   }
 }
